# sample_codes

Apache/: vhost_config_2.4
C++/: cplusplus-binary-file-operations.cpp
CMake/: CMakeLists.txt  cmake_demo.cpp
Java/: BufferOrientedFileIO.java  JSON.java  README.md  README.txt  StreamOrientedFileIO.java
LaTex/beamer/: ref.bib  slides.tex
Makefiles/: Makefile-subfolder.UNIX  Makefile.UNIX
Makefiles/Windows/: Makefile
Matlab/: readme.txt  remove_ele_vec.m
OpenCV/: dense_optical_flow.cpp  mat-memory-manipulation.cpp  opencv-video-read-display.cpp  sift_detection.cpp  sobel_gradient.cpp  sparse_optical_flow.cpp
